--- a/File_Upload/Pages/Index.razor
+++ b/File_Upload/Pages/Index.razor
@@ -27,19 +27,39 @@
 	<label>@labelText</label>
 	<br />
 </div>
+@if(previewImages.Count > 0)
+{
+	<h3>Selected Files</h3>
+	<div class="card">
+		<div class="row align-items-start">
+			@foreach (var item in previewImages)
+			{
+				<div class="col-2">
+					<img class="rounded float-left" src="@item" width="100" height="100" />
+				</div>
+			}
+		</div>
+	</div>
+}
 
 @code{
 	private bool displayProgress;
 	private int progressPercent;
 
 	IReadOnlyList<IBrowserFile> selectedFiles;
+	private IList<string> previewImages = new List<string>(); 
 
 	private string labelText = "";
 
-	private void OnInputFileChanged(InputFileChangeEventArgs e)
+	private async Task OnInputFileChanged(InputFileChangeEventArgs e)
 	{
 		selectedFiles = new List<IBrowserFile>();
 		selectedFiles = e.GetMultipleFiles();
+		foreach (var file in selectedFiles)
+		{
+			var imageUrl = await fileUpload.GeneratePreviewUrl(file);
+			previewImages.Add(imageUrl);
+		}
 	}
 
 	private async Task UploadFiles()
